--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    implementation "com.stripe:stripe-java:24.0.0"
+
 }
 
 tasks.named('test') {
