--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
     implementation "com.stripe:stripe-java:24.0.0"
+    implementation 'com.google.code.gson:gson:2.10.1'
 
 }
 
