--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,10 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
-    //Email sender Api
+    //Email sender API
     implementation 'com.sendgrid:sendgrid-java:4.10.1'
 
+    //ID verification API
     implementation "com.stripe:stripe-java:24.0.0"
     implementation 'com.google.code.gson:gson:2.10.1'
 
