--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation "com.stripe:stripe-java:24.0.0"
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    //JAVA MAIL SENDER
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.2.0'
+
+
 }
 
 tasks.named('test') {
