--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,12 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 database.url=jdbc:mariadb://localhost:3306/virtual_wallet
 database.username=root
-database.password=1234
+database.password=123
+#Mail properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=flexpayggk@gmail.com
+spring.mail.password=bldthonkyarvtewf
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
