--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 database.url=jdbc:mariadb://localhost:3306/virtual_wallet
 database.username=root
-database.password=123
+database.password=Kati98leti06
 #Mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -12,3 +12,7 @@ spring.mail.password=bldthonkyarvtewf
 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+server.error.whitelabel.enabled=false
+server.error.path=/error
