--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-server.error.whitelabel.enabled=false
-server.error.path=/error
+#server.error.whitelabel.enabled=false
+#server.error.path=/error
